--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            position: relative;
         }
         .calculator-container {
             background: #060D1F;
@@ -72,6 +73,15 @@
             text-align: center;
             color: #4D6FF7;
         }
+        /* Watermark Style */
+        .watermark {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            color: #ffffff;
+            font-size: 0.8rem;
+            opacity: 0.3;
+        }
     </style>
 </head>
 <body>
@@ -108,6 +118,9 @@
         
         <div class="result" id="result"></div>
     </div>
+
+    <!-- Watermark -->
+    <div class="watermark">© Your Company Name</div>
 
     <script>
         const exchangeRates = {
