--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <!-- Watermark -->
-    <div class="watermark">© Your Company Name</div>
+    <div class="watermark">© Reach Resolve</div>
 
     <script>
         const exchangeRates = {
